--- a/syn-refinements/p.bib
+++ b/syn-refinements/p.bib
@@ -44,6 +44,14 @@
   year      = {2011},
 }
 
+@inproceedings{moura08,
+  author    = {Leonardo Mendon{\c{c}}a de Moura and
+               Nikolaj Bj{\o}rner},
+  title     = {{Z3:} An Efficient {SMT} Solver},
+  booktitle = {{TACAS}},
+  year      = {2008},
+}
+
 @inproceedings{pierce98,
   author    = {Benjamin C. Pierce and
                David N. Turner},
