--- a/syn-refinements/p.tex
+++ b/syn-refinements/p.tex
@@ -18,6 +18,10 @@
 \input{cmds}
 \input{rev}
 
+\input{shorthand}
+
+\input{std}
+
 \begin{document}
 
 \input{hdr}
@@ -30,7 +34,7 @@
 
 \input{overview}
 
-% \input{background}
+\input{background}
 
 \input{design}
 
