--- a/syn-refinements/pkgs.tex
+++ b/syn-refinements/pkgs.tex
@@ -28,3 +28,10 @@
 
 % use \num{123456} -> 123,456
 \sisetup{group-separator={,},group-minimum-digits={3},output-decimal-marker={.}}
+
+% figures with captions lined up:
+\usepackage[linesnumbered]{algorithm2e}
+
+\usepackage{floatrow}
+
+\usepackage{semantic}
