--- a/syn-refinements/shorthand.tex
+++ b/syn-refinements/shorthand.tex
@@ -1,4 +1,105 @@
 % shorthand: paper-specific shorthand
+\newcommand{\apps}[1]{\mathsf{apps}[ #1 ]}
+
+\newcommand{\appsof}[1]{ \mathsf{Apps}[ #1 ]}
+
+\newcommand{\argsof}[1]{\mathsf{args}[ #1 ]}
+
+\newcommand{\arityof}[1]{\mathsf{arity}}
+
+\newcommand{\base}{\mathsf{Base}}
+
+\newcommand{\bodies}[1]{\mathsf{Bodies}[ #1 ]}
+
+\newcommand{\bodyof}[1]{\mathsf{Body}[ #1 ]}
+
+\newcommand{\chc}[1]{\mathsf{CHC}[ #1 ]}
+
+\newcommand{\chcs}[1]{\mathsf{CHCs}[ #1 ]}
+
+\newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
+
+\newcommand{\const}{\mathsf{Const}}
+
+\newcommand{\ctrof}[1]{\mathsf{Ctr}[ #1 ]}
+
+\newcommand{\degreeof}{\mathsf{deg}}
+
+\newcommand{\derdagsof}[1]{\mathsf{DerDAGs}[ #1 ]}
+
+\newcommand{\evalrules}{\mathsf{EvalRules}}
+
+\newcommand{\evalsto}{\Downarrow}
+
+\newcommand{\expr}{\mathsf{Exprs}}
+
+\newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
+
+\newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
+
+\newcommand{\freevars}{\mathsf{FreeVars}}
+
+\newcommand{\hastype}{\vdash}
+
+\newcommand{\headof}[1]{\mathsf{Head}[ #1 ]}
+
+\newcommand{\interps}[1]{\mathsf{Interps}[ #1 ]}
+
+\newcommand{\isind}{\mathsf{IsInd}}
+
+\newcommand{\issat}{\textsc{IsSat}\xspace}
+
+\newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
+
+\newcommand{\judges}{\vdash}
+
+\newcommand{\mergeinvs}{\textsc{MergeInvs}\xspace}
+
+\newcommand{\nonequiv}{\mathsf{NonEquiv}}
+
+\newcommand{\ops}{\mathsf{ops}}
+
+\newcommand{\queryof}[1]{\mathsf{Query}[ #1 ]}
+
+\newcommand{\relinvs}{\mathsf{RelInvs}}
+
+\newcommand{\relof}[1]{\mathsf{Rel}[ #1 ]}
+
+\newcommand{\relpreds}{\mathsf{RelPreds}}
+
+\newcommand{\relsof}[1]{\mathsf{Rels}[ #1 ]}
+
+\newcommand{\solveitp}{\textsc{SolveItp}\xspace}
+
+\newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
+
+\newcommand{\stlc}{\mathsf{STLC}}
+
+\newcommand{\subexps}{\mathsf{SubExps}}
+
+\newcommand{\symrels}{\mathsf{SymRels}}
+
+\newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
+
+\newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
+
+\newcommand{\tformulas}[1]{\mathsf{Forms}[ #1 ]}
+
+\newcommand{\types}{\mathsf{Types}}
+
+\newcommand{\values}{\mathsf{Values}}
+
+\newcommand{\vars}{\mathsf{Vars}}
+
+\newcommand{\varsof}[1]{\mathsf{Vars}[ #1 ]}
+
+\newcommand{\verify}{\textsc{Verify}\xspace}
+
+\newcommand{\verifyaux}{\textsc{VerifyAux}\xspace}
+
+\newcommand{\verifyders}{\textsc{VerifyDers}\xspace}
+
+\newcommand{\vocab}{\mathsf{Vocab}}
 
 %%% Local Variables: 
 %%% mode: latex
