background: updates defn of types

--- a/syn-refinements/shorthand.tex
+++ b/syn-refinements/shorthand.tex
@@ -5,7 +5,7 @@
 
 \newcommand{\argsof}[1]{\mathsf{args}[ #1 ]}
 
-\newcommand{\arityof}[1]{\mathsf{arity}}
+\newcommand{\arityof}[1]{|#1|}
 
 \newcommand{\base}{\mathsf{Base}}
 
