--- a/syn-refinements/background.tex
+++ b/syn-refinements/background.tex
@@ -1,6 +1,178 @@
 \section{Background}
 \label{s:background}
 
+\subsection{The Simply-Typed $\lambda$-calculus}
+\label{sec:stlc}
+\begin{figure*}[t]
+  \begin{floatrow}[2]
+    \ffigbox[.48\textwidth] %
+    { \caption{The space of program expressions, $\expr$.} %
+      \label{fig:exprs} }
+    {  \begin{align*}
+        % expression is a constant,
+        e \rightarrow &\ c \\
+        % or a variable,
+        | &\ x \\
+        % or a binary operation,
+        | &\ e \oplus e \\
+        % or a constructor application,
+        | &\ C(e_0, \ldots, e_k) \\
+        % or case split,
+        | &\ \cc{match}\ e\ \cc{with}\ C_0(X_0)\ \cc{->}\ e_0 %
+        \ldots %
+        C_k(X_k)\ \cc{->}\ e_k \\
+        % or an abstraction,
+        | &\ \lambda x.\ e \\
+        % or an application,
+        | &\ e\ e \\
+        % or a fixpoint,
+        | &\ \fix{ f }{ e }
+      \end{align*} }
+    %
+    \ffigbox[.48\textwidth] %
+    {\caption{The space of types, $\types$.
+        %
+        Metavariable $\tau$ ranges over $\types$ and $X$ ranges over
+        type variables.} %
+      \label{fig:types} }
+    %
+    { \begin{align*} %
+        % a type is a base type,
+        \tau \rightarrow &\ \bools\ |\ \ints \\
+        % a type variable,
+        | &\ X \\
+        % a function type, or
+        | &\ \tau \rightarrow \tau \\
+        % a recursive type
+        | &\ \mu X.\ C_0(\tau_0^0, \ldots, \tau_0^{\arityof{C_0}}), %
+        \ldots, C_n(\tau_n^0, \ldots, \tau_n^{\arityof{C_n}})
+      \end{align*} }
+  \end{floatrow}
+\end{figure*}
+
+% define STLC syntax:
+\paragraph{Syntax} \autoref{fig:exprs} defines the space of
+simply-typed $\lambda$-calculus expressions, $\expr$.
+%
+For the remainder of this paper, metavariable $e$ ranges over
+$\expr$, %
+$c$ ranges over constants, %
+$\oplus$ ranges over binary operators, $x$ and $f$ range over
+program variables, and $C$ ranges over constructor symbols.
+%
+An expression is a Boolean or integer constant, %
+a variable (drawn from space of variables $\vars$), %
+an application of an fixed operator to a pair of expressions, %
+an application of a constructor to a sequence of expressions, %
+a match expression, %
+a $\lambda$-abstraction, %
+an application, or %
+a fixpoint expression.
+%
+For each $e \in \expr$, the \emph{free-variables} of $e$ are denoted
+$\freevars(e)$.
+%
+A STLC \emph{program} is a closed expression---i.e., an expression $e$
+such that $\freevars(e) = \emptyset$.
+%
+The space of STLC programs is denoted $\stlc$.
+%
+For $P \in \stlc$, the set of all subexpressions of $P$ is denoted
+$\subexps(P)$.
+
+% define semantics:
+\paragraph{Semantics}
+%
+\begin{figure*}
+  \centering
+  \begin{gather*}
+  % evaluate const:
+  \inference[ CONST ]{ }{ \Gamma \judges c \evalsto c } 
+  % evaluate variable:
+  \inference[ VAR ]{ }{ \Gamma \judges x \evalsto \Gamma(x) }
+  % evaluate binary operations:
+  \inference[ OP ]{ %
+    \Gamma \judges e_0 \evalsto v_0 & %
+    \Gamma \judges e_1 \evalsto v_1 } %
+  { \Gamma \judges e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\ \\
+  % evaluate constructor application:
+  \inference[ CONS ]{ %
+    \Gamma \judges e_0 \evalsto v_0 & \ldots & %
+    \Gamma \judges e_k \evalsto v_k } %
+  { \Gamma \judges C(e_0, \ldots, e_k) \evalsto C(v_0, \ldots, v_k) }
+  % evaluate if-then-else by then branch
+  \inference[ $\mathrm{MATCH}_{i}$ ]{ %
+    \Gamma \judges e \evalsto C_i(v_0, \ldots, v_n) & %
+    X_i = x_1, \ldots, x_{|C_i|} \\ %
+    \Gamma[ x_0 \mapsto v_0, \ldots, x_{|C_i|} \mapsto v_{|C_i|} ]
+    \judges %
+    e_i \evalsto v' } %
+  { \Gamma \judges \cc{match}\ e\ \cc{with}\ %
+    C_0(X_0)\ \cc{->}\ e_0 %
+    \ldots %
+    C_k(X_k)\ \cc{->}\ e_k \evalsto v' } \\ \\
+  % evaluate an abstraction:
+  \inference[ ABS ]{ } %
+  { \Gamma \judges \lambda x.\ e \evalsto \lambda x.\ e }
+  % apply a lambda:
+  \inference[ APP-$\lambda$ ]{ %
+    \Gamma \judges e_0 \evalsto \lambda x.\ e_0' & %
+    \Gamma \judges e_1 \evalsto v_1 & %
+    \upd{\Gamma}{x}{v_1} \judges e_0' \evalsto v }
+  { \Gamma \judges e_0\ e_1 \evalsto v } \\ \\
+  % evaluate a fix:
+  \inference[ FIX ]{ } %
+  { \Gamma \judges \fix{ f }{ e } \evalsto \fix{ f }{ e } } 
+  % apply a fixpoint:
+  \inference[ APP-FIX ]{ %
+    \Gamma \judges e_0 \evalsto \fix{ f }{ e_0' } & %
+    \upd{ \Gamma }{ f }{ \fix{ f }{ e_0' } } \judges %
+    e_0'\ e_1 \evalsto v }
+  { \Gamma \judges e_0\ e_1 \evalsto v } 
+  \end{gather*}
+  \caption{The natural semantics of $\stlc$.}
+  \label{fig:nat-sem}
+\end{figure*}
+%
+A value is a Boolean, an integer, a $\lambda$ abstraction, a fixpoint
+abstraction, or a constructor applied to a sequence of values;
+%
+the space of values is denoted $\values$.
+%
+The semantics of $\stlc$ is defined by a natural semantics that
+relates expressions to values, given in \autoref{fig:nat-sem}.
+%
+For $e \in \expr$ and $v \in \values$, the fact that $e$
+\emph{evaluates} to $v$ is denoted $e \evalsto v$.
+
+\paragraph{Typing}
+%
+Each expression has a type that describe the spaces of values that it
+takes as input and the spaces of values to which it evaluates.
+%
+The space of types is given in \autoref{fig:types}.
+%
+A type is either the space of Boolean values, the space of integers, %
+a type variable, %
+a function over types, or %
+a recursively-defined type.
+
+base type or a function from a base type to a type.
+%
+The definition of types in \autoref{fig:types} thus does not include
+higher-order expressions.
+%
+We will relax this restriction in future work.
+%
+\BH{It's probably reasonable to relax this assumption before a first
+  paper}
+
+% introduce has-type symbol:
+For expression $e \in \expr$ and type $\tau \in \types$, the fact that
+$e$ has type $\tau$ is denoted $e \hastype \tau$.
+%
+The definition of the has-type relation is standard.
+
 % formal logic:
 \subsection{Formal logic}
 \label{sec:itps}
@@ -37,6 +209,19 @@ $\replace{\varphi}{Y}{Z}$ is denoted alternatively as $\varphi[ Z ]$.
 %
 The number of free variables in formula $\varphi$ is denoted
 $\degreeof{\varphi}$.
+
+\paragraph{Symbolic encoding of semantics}
+%
+The semantics of $\stlc$ is represented symbolically using \lia
+formulas.
+%
+\BH{hoist defn of disjoint copies of variables for expressions}
+%
+In particular, for each $e \in \expr$ with subexpressions $e_0,
+\ldots, e_n \in \expr$, there is some $\varphi \in \formulas{\vars[e],
+  \vars[e_0], \ldots, \vars[e_n]}$ such that
+
+\BH{merge updated defn from new draft}
 
 % define CHC's:
 \subsection{Constrained Horn Clauses}
@@ -189,232 +374,6 @@ If, in addition, $\sigma(\queryof{ \mathcal{S} }) \entails \false$,
 then $\sigma$ is a \emph{solution} of $\mathcal{S}$.
 %
 
-DEP
-
-%
-In this section, we define as our target language an extension of the
-simply-typed $\lambda$-calculus (STLC) (\autoref{sec:stlc}).
-%
-We then define partial equivalence of STLC programs
-(\autoref{sec:peq}).
-
-\subsection{The Simply-Typed $\lambda$-calculus}
-\label{sec:stlc}
-\begin{figure*}[t]
-  \begin{floatrow}[2]
-    \ffigbox[.48\textwidth] %
-    { \caption{The space of program expressions, $\expr$.} %
-      \label{fig:exprs} }
-    {  \begin{align*}
-        % expression is a constant,
-        e \rightarrow &\ c \\
-        % or a variable,
-        | &\ x \\
-        % or a binary operation,
-        | &\ e \oplus e \\
-        % or an if-then-else, 
-        | &\ \ite{ e }{ e }{ e } \\
-        % or an abstraction,
-        | &\ \lambda x.\ e \\
-        % or an application,
-        | &\ e\ e \\
-        % or a fixpoint,
-        | &\ \fix{ f }{ e }
-      \end{align*} }
-    %
-    \ffigbox[.48\textwidth] %
-    {\caption{The space of types, $\types$.
-        %
-        Metavariable $\tau$ ranges over $\types$.} %
-      \label{fig:types} }
-    %
-    { \begin{align*} %
-        \tau \rightarrow &\ \base\ %
-        |\ \base \to \tau \\
-        \base \rightarrow &\ \bools\ %
-        |\ \ints
-      \end{align*} }
-  \end{floatrow}
-\end{figure*}
-%
-\BH{lift scope of metavariables}
-
-% define STLC syntax:
-\paragraph{Syntax} \autoref{fig:exprs} defines the space of
-simply-typed $\lambda$-calculus expressions, $\expr$.
-%
-For the remainder of this paper, metavariable $e$ ranges over
-$\expr$, %
-$c$ ranges over constants, %
-$\oplus$ ranges over binary operators, and $x$ and $f$ range over
-program variables.
-%
-An expression is a Boolean or integer constant, %
-a variable (drawn from space of variables $\vars$), %
-an application of an fixed operator to a pair of expressions, %
-an \cc{if}-\cc{then}-\cc{else} expression, %
-a $\lambda$-abstraction, %
-an application, or %
-a fixpoint expression.
-%
-For each $e \in \expr$, the \emph{free-variables} of $e$ are denoted
-$\freevars(e)$.
-%
-A STLC \emph{program} is a closed expression---i.e., an expression $e$
-such that $\freevars(e) = \emptyset$.
-%
-The space of STLC programs is denoted $\stlc$.
-%
-For $P \in \stlc$, the set of all subexpressions of $P$ is denoted
-$\subexps(P)$.
-
-% define semantics:
-\paragraph{Semantics}
-%
-\begin{figure*}
-  \centering
-  \begin{gather*}
-  % evaluate const:
-  \inference[ CONST ]{ }{ \Gamma \judges c \evalsto c } 
-  % evaluate variable:
-  \inference[ VAR ]{ }{ \Gamma \judges x \evalsto \Gamma(x) }
-  % evaluate binary operations:
-  \inference[ OP ]{ %
-    \Gamma \judges e_0 \evalsto v_0 & %
-    \Gamma \judges e_1 \evalsto v_1 } %
-  { \Gamma \judges e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\
-  \\
-  % evaluate if-then-else by then branch
-  \inference[ ITE-T ]{ %
-    \Gamma \judges e_0 \evalsto \true & %
-    \Gamma \judges e_1 \evalsto v_1 } %
-  { \Gamma \judges \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_1 }
-  % evaluate if-then-else by else branch
-  \inference[ ITE-F ]{ %
-    \Gamma \judges e_0 \evalsto \false & %
-    \Gamma \judges e_2 \evalsto v_2 } %
-  { \Gamma \judges \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_2 } \\
-  \\
-  % evaluate an abstraction:
-  \inference[ ABS ]{ } %
-  { \Gamma \judges \lambda x.\ e \evalsto \lambda x.\ e }
-  % evaluate a fix:
-  \inference[ FIX ]{ } %
-  { \Gamma \judges \fix{ f }{ e } \evalsto \fix{ f }{ e } } \\
-  \\
-  % apply a lambda:
-  \inference[ APP-$\lambda$ ]{ %
-    \Gamma \judges e_0 \evalsto \lambda x.\ e_0' & %
-    \Gamma \judges e_1 \evalsto v_1 & %
-    \upd{\Gamma}{x}{v_1} \judges e_0' \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } \\
-  \\
-  % apply a fixpoint:
-  \inference[ APP-FIX ]{ %
-    \Gamma \judges e_0 \evalsto \fix{ f }{ e_0' } & %
-    \upd{ \Gamma }{ f }{ \fix{ f }{ e_0' } } \judges %
-    e_0'\ e_1 \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } 
-  \end{gather*}
-  \caption{The natural semantics of $\stlc$.}
-  \label{fig:nat-sem}
-\end{figure*}
-%
-A value is a Boolean, an integer, a $\lambda$ abstraction, or a
-fixpoint abstraction;
-%
-the space of values is denoted $\values$.
-%
-The semantics of $\stlc$ is defined by a natural semantics that
-relates expressions to values, given in \autoref{fig:nat-sem}.
-%
-For $e \in \expr$ and $v \in \values$, the fact that $e$
-\emph{evaluates} to $v$ is denoted $e \evalsto v$.
-
-\BH{define space of derivations}
-
-\paragraph{Typing}
-%
-Each expression has a type that describe the spaces of values that it
-takes as input and the spaces of values to which it evaluates.
-%
-The space of types is given in \autoref{fig:types}.
-%
-A type is either a base type or a function from a base type to a type.
-%
-The definition of types in \autoref{fig:types} thus does not include
-higher-order expressions.
-%
-We will relax this restriction in future work.
-%
-\BH{It's probably reasonable to relax this assumption before a first
-  paper}
-
-% introduce has-type symbol:
-For expression $e \in \expr$ and type $\tau \in \types$, the fact that
-$e$ has type $\tau$ is denoted $e \hastype \tau$.
-%
-The definition of the has-type relation is standard.
-
-% standard defns for logic:
-\paragraph{Logic}
-%
-\sys uses formal logic to model the semantics of programs.
-%
-The quantifier-free fragment of the theory of linear arithmetic is
-denoted $\lia$.
-%
-For each space of logical variables $X$, the space of $\lia$ formulas
-over $X$ is denoted $\formulas{X}$.
-%
-For each formula $\varphi \in \formulas{X}$, the set of variables that
-occur in $\varphi$ (i.e., the \emph{vocabulary} of $\varphi$) is
-denoted $\vocab(\varphi)$.
-% define models, satisfaction, entailment
-A \lia \emph{model} $m$ over $X$ is an assignment from each variable
-in $X$ to an integer.
-%
-The fact that model $m$ \emph{satisfies} a formula $\varphi$ is
-denoted $m \sats \varphi$.
-%
-For formulas $\varphi_0, \ldots, \varphi_n, \varphi \in \formulas{X}$,
-the fact that $\varphi_0, \ldots, \varphi_n$ \emph{entail} $\varphi$
-is denoted $\varphi_0, \ldots, \varphi_n \entails \varphi$.
-
-% Define replacement and substitution:
-For all vectors of variables $X = [ x_0, \ldots, x_n ]$ and $Y = [
-y_0, \ldots, y_n ]$, the \lia formula constraining the equality of
-each element in $X$ with its corresponding element in $Y$, i.e., the
-formula $\bigland_{0 \leq i \leq n} x_i = y_i$, is denoted $X = Y$.
-%
-The repeated replacement of variables $\varphi[ y_0 / x_0 \ldots y_{n}
-/ x_{n} ]$ is denoted $\replace{\varphi}{Y}{X}$.
-%
-For each formula $\varphi$ defined over free variables $X$,
-$\replace{\varphi}{X}{Y}$ is denoted alternatively as $\varphi[Y]$.
-%
-The number of free variables in formula $\varphi$ is denoted
-$\degreeof(\varphi)$.
-
-% Introduce decision procedure:
-Although determining the satisfiability of a \lia formula is
-NP-complete in general, decision procedures for \lia have been
-proposed that often determine the satisfiability of formulas that
-arise from practical verification problems efficiently~\cite{moura08}.
-
-\paragraph{Symbolic encoding of semantics}
-%
-The semantics of $\stlc$ is represented symbolically using \lia
-formulas.
-%
-\BH{hoist defn of disjoint copies of variables for expressions}
-%
-In particular, for each $e \in \expr$ with subexpressions $e_0,
-\ldots, e_n \in \expr$, there is some $\varphi \in \formulas{\vars[e],
-  \vars[e_0], \ldots, \vars[e_n]}$ such that
-
-\BH{replace with new problem defn: just checking if a program has a
-  type}
 
 %%% Local Variables: 
 %%% mode: latex
