background: adds defn of refinement types

--- a/syn-refinements/background.tex
+++ b/syn-refinements/background.tex
@@ -1,184 +1,18 @@
 \section{Background}
 \label{s:background}
-
-\subsection{The Simply-Typed $\lambda$-calculus}
-\label{sec:stlc}
-\begin{figure*}[t]
-  \begin{floatrow}[2]
-    \ffigbox[.48\textwidth] %
-    { \caption{The space of program expressions, $\expr$.} %
-      \label{fig:exprs} }
-    {  \begin{align*}
-        % expression is a constant,
-        e \rightarrow &\ c \\
-        % or a variable,
-        | &\ x \\
-        % or a binary operation,
-        | &\ e \oplus e \\
-        % or a constructor application,
-        | &\ C(e_0, \ldots, e_k) \\
-        % or case split,
-        | &\ \cc{match}\ e\ \cc{with}\ C_0(X_0)\ \cc{->}\ e_0 %
-        \ldots %
-        C_k(X_k)\ \cc{->}\ e_k \\
-        % or an abstraction,
-        | &\ \lambda x.\ e \\
-        % or an application,
-        | &\ e\ e \\
-        % or a fixpoint,
-        | &\ \fix{ f }{ e }
-      \end{align*} }
-    %
-    \ffigbox[.48\textwidth] %
-    {\caption{The space of types, $\types$.
-        %
-        Metavariable $\tau$ ranges over $\types$ and $X$ ranges over
-        type variables.} %
-      \label{fig:types} }
-    %
-    { \begin{align*} %
-        % a type is a base type,
-        \tau \rightarrow &\ \bools\ |\ \ints \\
-        % a type variable,
-        | &\ X \\
-        % a function type, or
-        | &\ \tau \rightarrow \tau \\
-        % a recursive type
-        | &\ \mu X.\ C_0(\tau_0^0, \ldots, \tau_0^{\arityof{C_0}}), %
-        \ldots, C_n(\tau_n^0, \ldots, \tau_n^{\arityof{C_n}})
-      \end{align*} }
-  \end{floatrow}
-\end{figure*}
-
-% define STLC syntax:
-\paragraph{Syntax} \autoref{fig:exprs} defines the space of
-simply-typed $\lambda$-calculus expressions, $\expr$.
 %
-For the remainder of this paper, metavariable $e$ ranges over
-$\expr$, %
-$c$ ranges over constants, %
-$\oplus$ ranges over binary operators, $x$ and $f$ range over
-program variables, and $C$ ranges over constructor symbols.
+In this section, we review the foundations on which \sys is built.
 %
-An expression is a Boolean or integer constant, %
-a variable (drawn from space of variables $\vars$), %
-an application of an fixed operator to a pair of expressions, %
-an application of a constructor to a sequence of expressions, %
-a match expression, %
-a $\lambda$-abstraction, %
-an application, or %
-a fixpoint expression.
-%
-For each $e \in \expr$, the \emph{free-variables} of $e$ are denoted
-$\freevars(e)$.
-%
-A STLC \emph{program} is a closed expression---i.e., an expression $e$
-such that $\freevars(e) = \emptyset$.
-%
-The space of STLC programs is denoted $\stlc$.
-%
-For $P \in \stlc$, the set of all subexpressions of $P$ is denoted
-$\subexps(P)$.
-
-% define semantics:
-\paragraph{Semantics}
-%
-\begin{figure*}
-  \centering
-  \begin{gather*}
-  % evaluate const:
-  \inference[ CONST ]{ }{ \Gamma \judges c \evalsto c } 
-  % evaluate variable:
-  \inference[ VAR ]{ }{ \Gamma \judges x \evalsto \Gamma(x) }
-  % evaluate binary operations:
-  \inference[ OP ]{ %
-    \Gamma \judges e_0 \evalsto v_0 & %
-    \Gamma \judges e_1 \evalsto v_1 } %
-  { \Gamma \judges e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\ \\
-  % evaluate constructor application:
-  \inference[ CONS ]{ %
-    \Gamma \judges e_0 \evalsto v_0 & \ldots & %
-    \Gamma \judges e_k \evalsto v_k } %
-  { \Gamma \judges C(e_0, \ldots, e_k) \evalsto C(v_0, \ldots, v_k) }
-  % evaluate if-then-else by then branch
-  \inference[ $\mathrm{MATCH}_{i}$ ]{ %
-    \Gamma \judges e \evalsto C_i(v_0, \ldots, v_n) & %
-    X_i = x_1, \ldots, x_{|C_i|} \\ %
-    \Gamma[ x_0 \mapsto v_0, \ldots, x_{|C_i|} \mapsto v_{|C_i|} ]
-    \judges %
-    e_i \evalsto v' } %
-  { \Gamma \judges \cc{match}\ e\ \cc{with}\ %
-    C_0(X_0)\ \cc{->}\ e_0 %
-    \ldots %
-    C_k(X_k)\ \cc{->}\ e_k \evalsto v' } \\ \\
-  % evaluate an abstraction:
-  \inference[ ABS ]{ } %
-  { \Gamma \judges \lambda x.\ e \evalsto \lambda x.\ e }
-  % apply a lambda:
-  \inference[ APP-$\lambda$ ]{ %
-    \Gamma \judges e_0 \evalsto \lambda x.\ e_0' & %
-    \Gamma \judges e_1 \evalsto v_1 & %
-    \upd{\Gamma}{x}{v_1} \judges e_0' \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } \\ \\
-  % evaluate a fix:
-  \inference[ FIX ]{ } %
-  { \Gamma \judges \fix{ f }{ e } \evalsto \fix{ f }{ e } } 
-  % apply a fixpoint:
-  \inference[ APP-FIX ]{ %
-    \Gamma \judges e_0 \evalsto \fix{ f }{ e_0' } & %
-    \upd{ \Gamma }{ f }{ \fix{ f }{ e_0' } } \judges %
-    e_0'\ e_1 \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } 
-  \end{gather*}
-  \caption{The natural semantics of $\stlc$.}
-  \label{fig:nat-sem}
-\end{figure*}
-%
-A value is a Boolean, an integer, a $\lambda$ abstraction, a fixpoint
-abstraction, or a constructor applied to a sequence of values;
-%
-the space of values is denoted $\values$.
-%
-The semantics of $\stlc$ is defined by a natural semantics that
-relates expressions to values, given in \autoref{fig:nat-sem}.
-%
-For $e \in \expr$ and $v \in \values$, the fact that $e$
-\emph{evaluates} to $v$ is denoted $e \evalsto v$.
-
-\paragraph{Typing}
-%
-Each expression has a type that describe the spaces of values that it
-takes as input and the spaces of values to which it evaluates.
-%
-The space of types is given in \autoref{fig:types}.
-%
-A type is either the space of Boolean values, the space of integers, %
-a type variable, %
-a function over types, or %
-a recursively-defined type.
-
-base type or a function from a base type to a type.
-%
-The definition of types in \autoref{fig:types} thus does not include
-higher-order expressions.
-%
-We will relax this restriction in future work.
-%
-\BH{It's probably reasonable to relax this assumption before a first
-  paper}
-
-% introduce has-type symbol:
-For expression $e \in \expr$ and type $\tau \in \types$, the fact that
-$e$ has type $\tau$ is denoted $e \hastype \tau$.
-%
-The definition of the has-type relation is standard.
+In \autoref{sec:logic}, we review definitions from formal logic; %
+in \autoref{sec:rtlc}, we define a $\lambda$-calculus with refinement
+types; %
+in \autoref{sec:chcs}, we define systems of Constrained Horn Clauses.
 
 % formal logic:
 \subsection{Formal logic}
-\label{sec:itps}
+\label{sec:logic}
 %
-\sys solves CHC systems, logic-programming problems in which a
-solution maps predicate symbols to first-order formulas.
+\sys uses logic to express and infer refinement types of programs.
 %
 All objects defined in this paper are defined over a fixed space of
 logical variables $X$.
@@ -210,9 +44,203 @@ $\replace{\varphi}{Y}{Z}$ is denoted alternatively as $\varphi[ Z ]$.
 The number of free variables in formula $\varphi$ is denoted
 $\degreeof{\varphi}$.
 
+\subsection{A $\lambda$-calculus with refinement types}
+\label{sec:rtlc}
+\begin{figure*}[t]
+  \begin{floatrow}[2]
+    \ffigbox[.48\textwidth] %
+    { \caption{The space of program expressions, $\expr$.} %
+      \label{fig:exprs} }
+    {  \begin{align*}
+        % expression is a constant,
+        e \rightarrow &\ c \\
+        % or a variable,
+        | &\ x \\
+        % or a binary operation,
+        | &\ e \oplus e \\
+        % or a constructor application,
+        | &\ C(e_0, \ldots, e_k) \\
+        % or case split,
+        | &\ \cc{match}\ e\ \cc{with}\ %
+        C_0(\overline{x}_0)\ \cc{->}\ e_0 %
+        \ldots %
+        C_k(\overline{x}_k)\ \cc{->}\ e_k \\
+        % or an abstraction,
+        | &\ \lambda x.\ e \\
+        % or an application,
+        | &\ e\ e \\
+        % or a fixpoint,
+        | &\ \fix{ f }{ e }
+      \end{align*} }
+    %
+    \ffigbox[.48\textwidth] %
+    {\caption{The space of types, $\types$.
+        %
+        Metavariable $\tau$ ranges over $\types$, %
+        $x_i$ and $y_i$ range over individual value variables, %
+        $\overline{x}$ range over vectors of value variables, and %
+        $X$ ranges over type variables.} %
+      \label{fig:types} }
+    %
+    { \begin{align*} %
+        % a type is a base type,
+        \tau \rightarrow &\ \setformer{ \nu : \bools }{ \varphi } \\
+        | &\ \setformer{ \nu : \ints}{ \varphi } \\
+        % a type variable,
+        | &\ X \overline{x} \\
+        % a function type, or
+        | &\ x : \tau \rightarrow \tau \\
+        % a recursive type
+        | &\ \mu X \overline{x}.\ %
+        C_0(y_0^0 : \tau_0^0, \ldots, %
+        y_0^{ \arityof{C_0} } : \tau_0^{ \arityof{C_0} }), %
+        \ldots, \\
+        &\ C_n(y_n^0 : \tau_n^0, \ldots, %
+        y_n^{ \arityof{C_n} } : \tau_n^{ \arityof{C_n} })
+      \end{align*} }
+  \end{floatrow}
+\end{figure*}
+
+% define STLC syntax:
+\paragraph{Syntax}
+% define spaces:
+\autoref{fig:exprs} defines the space of
+simply-typed $\lambda$-calculus expressions, $\expr$.
+%
+For the remainder of this paper, metavariable $e$ ranges over
+$\expr$, %
+$c$ ranges over constants, %
+$\oplus$ ranges over binary operators, $x$ and $f$ range over
+program variables, and $C$ ranges over constructor symbols.
+%
+Each constructor symbol $C$ is mapped to a fixed cardinality, denoted
+$|C| \in \nats$.
+
+% define expressions:
+An expression is a Boolean or integer constant, %
+a variable (drawn from space of variables $\vars$), %
+an application of an fixed operator to a pair of expressions, %
+an application of a constructor to a sequence of expressions, %
+a match expression, %
+a $\lambda$-abstraction, %
+an application, or %
+a fixpoint expression.
+%
+For each $e \in \expr$, the \emph{free-variables} of $e$ are denoted
+$\freevars(e)$.
+%
+A \emph{refinement-typed $\lambda$-calculus (RTLC)} \emph{program} is
+a closed expression---i.e., an expression $e$ such that $\freevars(e)
+= \emptyset$.
+%
+The space of RTLC programs is denoted $\rtlc$.
+%
+For $P \in \rtlc$, the set of all subexpressions of $P$ is denoted
+$\subexps(P)$.
+
+% define semantics:
+\paragraph{Semantics}
+%
+\begin{figure*}
+  \centering
+  \begin{gather*}
+  % evaluate const:
+  \inference[ CONST ]{ }{ \Gamma \judges c \evalsto c } 
+  % evaluate variable:
+  \inference[ VAR ]{ }{ \Gamma \judges x \evalsto \Gamma(x) }
+  % evaluate binary operations:
+  \inference[ OP ]{ %
+    \Gamma \judges e_0 \evalsto v_0 & %
+    \Gamma \judges e_1 \evalsto v_1 } %
+  { \Gamma \judges e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\ \\
+  % evaluate constructor application:
+  \inference[ CONS ]{ %
+    \Gamma \judges e_0 \evalsto v_0 & \ldots & %
+    \Gamma \judges e_k \evalsto v_k } %
+  { \Gamma \judges C(e_0, \ldots, e_k) \evalsto C(v_0, \ldots, v_k) }
+  % evaluate if-then-else by then branch
+  \inference[ $\mathrm{MATCH}_{i}$ ]{ %
+    \Gamma \judges e \evalsto C_i(v_0, \ldots, v_{ |C_i| }) & %
+    X_i = x_1, \ldots, x_{|C_i|} \\ %
+    \Gamma[ x_0 \mapsto v_0, \ldots, x_{|C_i|} \mapsto v_{|C_i|} ]
+    \judges %
+    e_i \evalsto v' } %
+  { \Gamma \judges \cc{match}\ e\ \cc{with}\ %
+    C_0(X_0)\ \cc{->}\ e_0 %
+    \ldots %
+    C_k(X_k)\ \cc{->}\ e_k \evalsto v' } \\ \\
+  % evaluate an abstraction:
+  \inference[ ABS ]{ } %
+  { \Gamma \judges \lambda x.\ e \evalsto \lambda x.\ e }
+  % apply a lambda:
+  \inference[ APP-ABS ]{ %
+    \Gamma \judges e_0 \evalsto \lambda x.\ e_0' & %
+    \Gamma \judges e_1 \evalsto v_1 & %
+    \upd{\Gamma}{x}{v_1} \judges e_0' \evalsto v }
+  { \Gamma \judges e_0\ e_1 \evalsto v } \\ \\
+  % evaluate a fix:
+  \inference[ FIX ]{ } %
+  { \Gamma \judges \fix{ f }{ e } \evalsto \fix{ f }{ e } } 
+  % apply a fixpoint:
+  \inference[ APP-FIX ]{ %
+    \Gamma \judges e_0 \evalsto \fix{ f }{ e_0' } & %
+    \upd{ \Gamma }{ f }{ \fix{ f }{ e_0' } } \judges %
+    e_0'\ e_1 \evalsto v }
+  { \Gamma \judges e_0\ e_1 \evalsto v } 
+  \end{gather*}
+  \caption{The natural semantics of $\rtlc$.}
+  \label{fig:nat-sem}
+\end{figure*}
+%
+A value is a Boolean, an integer, a $\lambda$ abstraction, a fixpoint
+abstraction, or a constructor applied to a sequence of values;
+%
+the space of values is denoted $\values$.
+%
+The semantics of $\rtlc$ is defined by a natural semantics that
+relates expressions to values, given in \autoref{fig:nat-sem}.
+%
+For $e \in \expr$ and $v \in \values$, the fact that $e$
+\emph{evaluates} to $v$ is denoted $e \evalsto v$.
+
+\paragraph{Typing}
+%
+Each expression has types that describe the spaces of values that it
+takes as input and the spaces of values to which it evaluates.
+%
+The space of types, defined over a space of type variable $\typevars$
+is given in \autoref{fig:types}.
+%
+A type is either a refined Boolean value, %
+a refined Integer value, %
+a type vector applied to a vector of value variables, %
+%
+\BH{does this also need to have a refinement?}
+%
+a function over types, %
+%
+or a recursive type, defined over a type parameter $X$ abstracted over
+a sequence of value variables $\overline{x}$.
+%
+For each $\tau \in \types$, the free value variables and free type
+variables of $\tau$, denoted $\freevaluevars(\tau) \subseteq \vars$
+and $\freetypevars(\tau) \subseteq \typevars$, are the value variables
+and type variables that occur in $\tau$ that are not bound in a
+recursive type definition.
+%
+$\tau$ is \emph{well-formed} if $\freevars(\tau) = \emptyset$.
+%
+Note that $\tau$ may contain occurrences of free value variables.
+
+% introduce has-type symbol:
+For expression $e \in \expr$ and type $\tau \in \types$, the fact that
+$e$ has type $\tau$ is denoted $e \hastype \tau$.
+%
+The definition of the has-type relation is standard.
+
 \paragraph{Symbolic encoding of semantics}
 %
-The semantics of $\stlc$ is represented symbolically using \lia
+The semantics of $\rtlc$ is represented symbolically using \lia
 formulas.
 %
 \BH{hoist defn of disjoint copies of variables for expressions}
@@ -221,7 +249,7 @@ In particular, for each $e \in \expr$ with subexpressions $e_0,
 \ldots, e_n \in \expr$, there is some $\varphi \in \formulas{\vars[e],
   \vars[e_0], \ldots, \vars[e_n]}$ such that
 
-\BH{merge updated defn from new draft}
+\BH{merge updated defn from current draft of equivalence paper}
 
 % define CHC's:
 \subsection{Constrained Horn Clauses}
