--- a/syn-refinements/shorthand.tex
+++ b/syn-refinements/shorthand.tex
@@ -35,9 +35,13 @@
 
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
-\newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
+\newcommand{\formulas}{\mathsf{Forms}}
 
-\newcommand{\freevars}{\mathsf{FreeVars}}
+\newcommand{\freetypevars}{\mathsf{FV}_T}
+
+\newcommand{\freevaluevars}{\mathsf{FV}_V}
+
+\newcommand{\freevars}{\mathsf{FV}}
 
 \newcommand{\hastype}{\vdash}
 
@@ -73,7 +77,7 @@
 
 \newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
 
-\newcommand{\stlc}{\mathsf{STLC}}
+\newcommand{\rtlc}{\mathsf{RTLC}}
 
 \newcommand{\subexps}{\mathsf{SubExps}}
 
@@ -86,6 +90,8 @@
 \newcommand{\tformulas}[1]{\mathsf{Forms}[ #1 ]}
 
 \newcommand{\types}{\mathsf{Types}}
+
+\newcommand{\typevars}{\mathsf{TypeVars}}
 
 \newcommand{\values}{\mathsf{Values}}
 
