--- a/syn-refinements/shorthand.tex
+++ b/syn-refinements/shorthand.tex
@@ -9,6 +9,10 @@
 
 \newcommand{\base}{\mathsf{Base}}
 
+\newcommand{\basetype}{\mathsf{BaseTy}}
+
+\newcommand{\basetypes}{\mathsf{BaseTypes}}
+
 \newcommand{\bodies}[1]{\mathsf{Bodies}[ #1 ]}
 
 \newcommand{\bodyof}[1]{\mathsf{Body}[ #1 ]}
@@ -18,6 +22,8 @@
 \newcommand{\chcs}[1]{\mathsf{CHCs}[ #1 ]}
 
 \newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
+
+\newcommand{\componenttypes}[1]{\mathsf{CompTypes}(#1)}
 
 \newcommand{\const}{\mathsf{Const}}
 
@@ -63,6 +69,8 @@
 
 \newcommand{\ops}{\mathsf{ops}}
 
+\newcommand{\paramrelcons}{\mathsf{Par}}
+
 \newcommand{\queryof}[1]{\mathsf{Query}[ #1 ]}
 
 \newcommand{\relinvs}{\mathsf{RelInvs}}
@@ -71,7 +79,13 @@
 
 \newcommand{\relpreds}{\mathsf{RelPreds}}
 
+\newcommand{\relpredof}[3]{R_{#1, #2, #3 }}
+
+\newcommand{\relpredsof}[3]{\mathsf{RelPreds}[ #1, #2, #3 ]}
+
 \newcommand{\relsof}[1]{\mathsf{Rels}[ #1 ]}
+
+\newcommand{\resrelcons}{\mathsf{Res}}
 
 \newcommand{\solveitp}{\textsc{SolveItp}\xspace}
 
