approach: fixes build

--- a/syn-refinements/approach.tex
+++ b/syn-refinements/approach.tex
@@ -72,8 +72,8 @@ $\tau$:
     constructor}
 \end{itemize}
 %
-Then $\sympreds{ e }{ x } = \typerelpredsof{ e }{ x }{ \basetype{ e }{
-    x } }$.
+Then $\symrelpreds{ e }{ x } = \typerelpredsof{ e }{ x }{ \basetype{ e
+  }{ x } }$.
 %
 \BH{define arguments of each relational predicate}
 
