--- a/syn-refinements/shorthand.tex
+++ b/syn-refinements/shorthand.tex
@@ -95,6 +95,8 @@
 
 \newcommand{\subexps}{\mathsf{SubExps}}
 
+\newcommand{\symrelpreds}[2]{\mathsf{Rels}_S[ #1, #2 ]}
+
 \newcommand{\symrels}{\mathsf{SymRels}}
 
 \newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
@@ -102,6 +104,8 @@
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
 
 \newcommand{\tformulas}[1]{\mathsf{Forms}[ #1 ]}
+
+\newcommand{\typerelpredsof}[3]{\mathsf{Rels}_T[ #1, #2 ]}
 
 \newcommand{\types}{\mathsf{Types}}
 
